bugfix user agent on ios

--- a/src/routes/watch-sport/watch.css
+++ b/src/routes/watch-sport/watch.css
@@ -137,7 +137,6 @@
   }
 
   .player__container__mobile {
-    height: 18rem;
     width: 100vw;
     margin: auto;
   }
